# multi-loops

./: .gitignore  LICENSE  README.md  multi-loop-overview.docx  pyproject.toml
docs/: direction-question-archive.md  executive-director-agent-direction.md  operator.md
multi_loop/: __init__.py  agent_loop.py  agent_sessions.py  capabilities.py  capability_config.py  cli.py  failures.py  hermes_runtime.py  index.py  leases.py  main_agent.py  mcp_runs.py  mcp_server.py  models.py  onboarding.py  orchestrator.py  planning.py  policy.py  providers.py  readiness.py  reports.py  runners.py  schedule_util.py  scheduler.py  storage.py  verification.py
multi_loop/tui/: __init__.py  app.py  engine.py  snapshot.py
tests/: test_agent_loop.py  test_agent_sessions.py  test_capabilities.py  test_cli.py  test_evolution.py  test_failures.py  test_hermes_runtime.py  test_index.py  test_leases.py  test_lessons.py  test_mcp_server.py  test_onboarding.py  test_orchestrator.py  test_permissions.py  test_planning.py  test_policy.py  test_readiness.py  test_reports.py  test_runners.py  test_schedule_util.py  test_scheduler.py  test_storage.py  test_tui.py
